[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/Art/Player/BlueWizard/2BlueWizardIdle/Chara - BlueIdle00002.png" type="Texture" id=1]
[ext_resource path="res://Assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Modules/TurnBased File/Battle.gd" type="Script" id=3]
[ext_resource path="res://Modules/TurnBased File/Enemy.tres" type="Resource" id=4]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.0364583, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.556863, 0, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.47451, 1, 0.415686, 0.537255 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=13]
resource_name = "enemyDied"
tracks/0/type = "value"
tracks/0/path = NodePath("Enemy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "enemydamage"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Enemy:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0 ), Color( 1, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "shake"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -34, 26 ), Vector2( 32, -38 ), Vector2( 48, 40 ), Vector2( -18, -30 ), Vector2( 0, 0 ) ]
}

[node name="Battle" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
enemy = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -159.0
margin_top = -135.0
margin_right = 160.0
margin_bottom = 138.0
texture = SubResource( 2 )
expand = true

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = 5.0
margin_top = 132.0
margin_right = 475.0
margin_bottom = 174.0
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 3 )
step = 1.0
value = 50.0
percent_visible = false

[node name="Label" type="Label" parent="ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
text = "HP: 25/50"
align = 1
valign = 1

[node name="Enemy" type="TextureRect" parent="."]
modulate = Color( 1, 0, 0, 1 )
margin_left = -15.0
margin_top = 87.4
margin_right = 497.0
margin_bottom = 599.4
texture = ExtResource( 1 )
stretch_mode = 3

[node name="PlayerPanel" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -64.0
custom_styles/panel = SubResource( 6 )

[node name="PlayerData" type="HBoxContainer" parent="PlayerPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.0
margin_top = -21.0
margin_right = 221.0
margin_bottom = 21.0
alignment = 1

[node name="Label" type="Label" parent="PlayerPanel/PlayerData"]
margin_top = 11.0
margin_right = 216.0
margin_bottom = 31.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "PLAYER"
align = 1

[node name="ProgressBar" type="ProgressBar" parent="PlayerPanel/PlayerData"]
margin_left = 220.0
margin_right = 437.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 3 )
max_value = 50.0
step = 1.0
value = 25.0
percent_visible = false

[node name="Label" type="Label" parent="PlayerPanel/PlayerData/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
text = "HP: 25/50"
align = 1
valign = 1

[node name="ActionPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -240.0
margin_top = 588.0
margin_right = 240.0
margin_bottom = 652.0
custom_styles/panel = SubResource( 6 )

[node name="Actions" type="HBoxContainer" parent="ActionPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 6.0
margin_right = -6.0
margin_bottom = -6.0
custom_constants/separation = 9
alignment = 1

[node name="Attack" type="Button" parent="ActionPanel/Actions"]
margin_right = 150.0
margin_bottom = 52.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 8 )
text = "ATTACK"

[node name="Defend" type="Button" parent="ActionPanel/Actions"]
margin_left = 159.0
margin_right = 309.0
margin_bottom = 52.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 8 )
text = "DEFEND"

[node name="Run" type="Button" parent="ActionPanel/Actions"]
margin_left = 318.0
margin_right = 468.0
margin_bottom = 52.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 8 )
text = "RUN"

[node name="TextBox" type="Panel" parent="."]
anchor_right = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 64.0

[node name="Label" type="Label" parent="TextBox"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 9 )
text = "A MAGIC ENEMY APPEARS!!"
align = 1
valign = 1

[node name="Ticker" type="Label" parent="TextBox"]
margin_left = 447.0
margin_top = 34.0
margin_right = 487.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 10 )
text = ">"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/enemyDied = SubResource( 13 )
anims/enemydamage = SubResource( 11 )
anims/shake = SubResource( 12 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[connection signal="pressed" from="ActionPanel/Actions/Attack" to="." method="_on_Attack_pressed"]
[connection signal="pressed" from="ActionPanel/Actions/Defend" to="." method="_on_Defend_pressed"]
[connection signal="pressed" from="ActionPanel/Actions/Run" to="." method="_on_Run_pressed"]
